sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value getNombreValeur
	val n = getNombreValeur()
                ^AlgBubbleSort1:7: error: reassignment to val
			j= j+1
                         ^AlgBubbleSort1:18: error: not found: value getNombreValeur
	val n = getNombreValeur()
                ^AlgBubbleSort1:19: error: not found: value trié
	while (trié == false){
               ^